native-cli/components/embedded/nativelink-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: el-route
spec:
  parentRefs:
    - sectionName: el-gateway
      name: el-gateway
  rules:
    - matches:
        - path:
            value: /eventlistener
      backendRefs:
        # This name is generated by the the EventListener config below.
        - name: el-nativelink-rebuild
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-route
  namespace: kube-system
spec:
  parentRefs:
    - sectionName: hubble-gateway
      name: hubble-gateway
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor-route
  namespace: flux-system
spec:
  parentRefs:
    - sectionName: capacitor-gateway
      name: capacitor-gateway
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: capacitor
          port: 9000
