native-cli/components/embedded/capacitor.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-to-capacitor
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: onechart
      app.kubernetes.io/instance: capacitor
  ingress:
  - fromEntities:
    - ingress
  - toPorts:
    - ports:
      - port: "9000"
        protocol: TCP
